syntax = "proto3";
package botApi;
option go_package = "github.com/h-varmazyar/Gate/services/telegramBot/api";
import "api/src/misc.proto";

service BotService {
  rpc Start(api.Void) returns (api.Void);
  rpc Stop(api.Void) returns (api.Void);
  rpc SendMessage(Message) returns (api.Void);
}

message Message{
  // @inject_tag: json:"chat_id"
  int64 ChatID =1;
  // @inject_tag: json:"reply_to"
  int32 ReplyTo = 2;
  // @inject_tag: json:"text"
  string Text = 3;
}